# django-migrations-checker

./: LICENSE  Makefile  README.md  action.yml  pyproject.toml  setup.cfg
.github/: black-problem-matcher.json  flake8-problem-matcher.json  isort-problem-matcher.json  mypy-problem-matcher.json
.github/actions/setup-project/: action.yaml
.github/workflows/: ci.yml
migration_checker/: checks.py  cli.py  executor.py  github.py  output.py  warnings.py
migration_checker/checks/: __init__.py  add_constraint.py  add_index.py  add_non_nullable_field.py  alter_multiple_tables.py  atomic_run_python.py  data_and_schema_changes.py  remove_field.py  rename_field.py  rename_model.py
tests/: conftest.py  models.py  settings.py  test_checks.py  test_executor.py
tests/migrations/: 0001_initial.py  0002_auto_20230207_1532.py  0003_alter_order_number.py  0004_orderline_order.py
