[tool.poetry]
name = "django-migrations-checker"
version = "0.1.0"
description = ""
authors = ["Oda.com <tech@oda.com>"]
license = "MIT"
packages = [
    { include = "migration_checker" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = {version = "^3.2.16", optional = true }

[tool.poetry.extras]
django = ["Django"]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
django-stubs = "^1.14.0"
flake8 = "^6.0.0"
isort = "^5.10.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
