[tool.poetry]
name = "django-migrations-checker"
version = "0.1.0"
description = ""
authors = ["Oda.com <tech@oda.com>"]
license = "MIT"
packages = [
    { include = "migration_checker" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = {version = ">=3.2", optional = true }

[tool.poetry.extras]
django = ["Django"]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
django-stubs = "^1.14.0"
flake8 = "^6.0.0"
isort = "^5.10.0"
mypy = "^1.0.0"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
psycopg2 = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
  | migrations
)/

'''

[tool.isort]
profile = "black"
skip = ["migrations"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true
files = ["migration_checker", "tests"]

[tool.django-stubs]
django_settings_module = "tests.settings"
